# for display continuity sake please use 2 spaces instead of tabs

2015-05-17 mmichaud <m.michael.michaud@orange.fr>
  * Fix #390 : selection lost if layer is moved

2015-05-16 ede
  * Fix #400 : Layer changed category untimely

2015-05-14 mmichaud <m.michael.michaud@orange.fr>
  * Arrows to go to next/previous row now also select next/previous feature

2015-05-14 mmichaud <m.michael.michaud@orange.fr>
  * #393 : SimpleQueryPlugIn : the bug was not completely fixed : features
    must be cloned to be added to new Layer but not for Selection or InfoPanel
  * FR 218 : implement new attribute types in RandomTrianglesPlugIn

2015-05-11 bertaz
  * Sextante raster layers: added ability to handle rasters with different x and y cell sizes.

2015-05-10 mmichaud <m.michael.michaud@orange.fr>
  * Repair and improve SaveViewAsBeanTool

2015-05-07 mmichaud <m.michael.michaud@orange.fr>
  * Fix a horrible bug in Buffer plugin (attributes were not preserved)

2015-05-04 ede
  oj_linux.sh
  * fix Gentoo java version '' insufficient bug
  http://sourceforge.net/p/jump-pilot/feature-requests/221
  * java version check now more robust, warns only if version 
    cannot be detected properly
  * follow links to oj_linux.sh now indefinitely
  * resolve JUMP_HOME now without . and ..

2015-04-12 Giuseppe Aruta <giuseppe_aruta@yahoo.it>
  * Raster Color Editor Panel. Added an option to invert color range and an option to set
    values outside choosen range to transparent. Optimized color ramp. Added more color ramps

2015-04-18 mmichaud <m.michael.michaud@orange.fr>
  * FR #220 : add an option to snap on feature being edited. Indeed, the new snap
    policy is applied on LineString edition only as snapping on a polygon being
    edited tends to create invalid polygons

2015-04-12 Giuseppe Aruta (ma15569)
  * Reworked dialog for rasterimage layers with no georeference info. Now images are opened
    into the view, by default, with original file width/height proportion. Option to warp