@@ -2,6 +2,8 @@
 
 2015-05-17 mmichaud <m.michael.michaud@orange.fr>
   * Fix #390 : selection lost if layer is moved
+  * Replace layerManager.remove by category.remove to sort layers :
+    much faster and partly solve FR 217
 
 2015-05-16 ede
   * Fix #400 : Layer changed category untimely
